@@ -125,8 +125,7 @@ include_rtems_HEADERS += libmisc/mw-fb/mw_fb.h libmisc/mw-fb/mw_uid.h
 
 ## shell
 if LIBSHELL
-include_rtems_HEADERS += libmisc/shell/shell.h libmisc/shell/shellconfig.h \
-  libmisc/shell/login.h
+include_rtems_HEADERS += libmisc/shell/shell.h libmisc/shell/shellconfig.h
 endif
 
 ## i2c
