@@ -237,10 +237,6 @@ PREINSTALL_FILES += $(PROJECT_INCLUDE)/rtems/shell.h
 $(PROJECT_INCLUDE)/rtems/shellconfig.h: libmisc/shell/shellconfig.h $(PROJECT_INCLUDE)/rtems/$(dirstamp)
 	$(INSTALL_DATA) $< $(PROJECT_INCLUDE)/rtems/shellconfig.h
 PREINSTALL_FILES += $(PROJECT_INCLUDE)/rtems/shellconfig.h
-
-$(PROJECT_INCLUDE)/rtems/login.h: libmisc/shell/login.h $(PROJECT_INCLUDE)/rtems/$(dirstamp)
-	$(INSTALL_DATA) $< $(PROJECT_INCLUDE)/rtems/login.h
-PREINSTALL_FILES += $(PROJECT_INCLUDE)/rtems/login.h
 endif
 $(PROJECT_INCLUDE)/rtems/libi2c.h: libi2c/libi2c.h $(PROJECT_INCLUDE)/rtems/$(dirstamp)
 	$(INSTALL_DATA) $< $(PROJECT_INCLUDE)/rtems/libi2c.h
