@@ -1,3 +1,7 @@
+2009-04-14	Sebastian Huber <Sebastian.Huber@embedded-brains.de>
+
+	* fileio/init.c: Removed obsolete header include.
+
 2009-04-03	Ralf Corsépius <ralf.corsepius@rtems.org>
 
 	* base_mp/node1/Makefile.am, base_mp/node2/Makefile.am,
